# KeneEgyCsapanev

./: .gitignore  README.md
caff-backend/: .gitignore  pom.xml  swagger.json  swagger.txt  temp
caff-backend/caff_parser/: CMakeLists.txt  caff-filesoption1.jpg.caff
caff-backend/caff_parser/src/: BmpGenerator.cpp  BmpGenerator.h  CaffParser.cpp  CaffParser.h  Ciff.cpp  Ciff.h  Makefile  main.cpp  output
caff-backend/src/main/resources/: application.properties
caff-frontend/: .gitignore  README.md  angular.json  karma.conf.js  package-lock.json  package.json  proxy.conf.json
caff-frontend/e2e/src/: app.e2e-spec.ts
caff-frontend/mock/: mock_objects.json  routes.json
caff-frontend/src/: index.html
caff-frontend/src/app/: app.component.spec.ts  app.component.ts  app.module.ts
caff-frontend/src/app/components/admin/: admin.component.css  admin.component.html  admin.component.ts
caff-frontend/src/app/helpers/: admin-guard.ts  auth-guard.ts  auth.interceptor.ts
caff-frontend/src/app/logout/: logout.component.ts
caff-frontend/src/app/models/: caff.ts  comment.ts  user.ts
caff-frontend/src/app/services/: auth.service.ts  caff-service.service.ts  cart.service.ts  token-storage.service.ts  user.service.ts  users.service.ts
caff-frontend/src/environments/: environment.ts
caff_parser/: CMakeLists.txt
caff_parser/src/: Animation.cpp  Animation.h  BmpGenerator.cpp  CAFF.cpp  CAFF.h  CaffParser.cpp  CaffParser.h  Credits.cpp  Credits.h  Header.cpp  Header.h  Makefile  ciff.cpp  ciff.h  main.cpp
doc/diags/: sequence.mdj
(+103 files in other folders)
